[package]
name = "converse-test4"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
aws-sdk-bedrockruntime = "1.73.0"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
void = "1.0.2"
